<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="357dp"
        android:layout_height="219dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pizzachulita" />

    <EditText
        android:id="@+id/tbUsuario"
        android:layout_width="301dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/tbUsuario"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblUsuario"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/lblUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="76dp"
        android:text="@string/lblUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/lblContra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="44dp"
        android:text="@string/lblContra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbUsuario" />

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="210dp"
        android:layout_height="55dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="98dp"
        android:text="@string/btnIniciarSesion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbContra" />

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="210dp"
        android:layout_height="55dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="25dp"
        android:text="@string/btnRegistrarse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIniciarSesion" />

    <EditText
        android:id="@+id/tbContra"
        android:layout_width="302dp"
        android:layout_height="49dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/tbContra"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblContra"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <CheckBox
        android:id="@+id/checkRecuerdame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginTop="16dp"
        android:text="@string/checkRecuerdame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbContra" />
</androidx.constraintlayout.widget.ConstraintLayout>