<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.Pedir">

    <Button
        android:id="@+id/btnConfirmar"
        android:layout_width="210dp"
        android:layout_height="55dp"
        android:layout_marginStart="122dp"
        android:layout_marginEnd="100dp"
        android:text="@string/btnConfirmar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbFav" />

    <TextView
        android:id="@+id/lblPedidoTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="261dp"
        android:text="@string/lblPedidoTitulo"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtPedido"
        android:layout_width="266dp"
        android:layout_height="516dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="80dp"
        android:text="@string/txtPedido"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPedidoTitulo" />

    <CheckBox
        android:id="@+id/cbFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="169dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="169dp"
        android:text="@string/cbFav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPedido" />
</androidx.constraintlayout.widget.ConstraintLayout>