<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.PaginaPrincipal">

    <Button
        android:id="@+id/btnWeb"
        android:layout_width="210dp"
        android:layout_height="55dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="205dp"
        android:layout_marginEnd="100dp"
        android:text="@string/btnWeb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPedir"
        android:layout_width="210dp"
        android:layout_height="55dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="100dp"
        android:text="@string/btnPedir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWeb" />

    <Button
        android:id="@+id/btnConfig"
        android:layout_width="210dp"
        android:layout_height="55dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="100dp"
        android:text="@string/btnConfig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPedir" />
</androidx.constraintlayout.widget.ConstraintLayout>