<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.Configuracion">

    <Button
        android:id="@+id/btnCerrarSesion"
        android:layout_width="210dp"
        android:layout_height="55dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="100dp"
        android:text="@string/btnCerrarSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnModoOscuro" />

    <TextView
        android:id="@+id/lblModoOscuro"
        android:layout_width="383dp"
        android:layout_height="89dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="24dp"
        android:text="@string/lblModoOscuro"
        android:textAlignment="center"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/btnModoOscuro"
        android:layout_width="168dp"
        android:layout_height="90dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="132dp"
        android:text="@string/btnModoOscuro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblModoOscuro" />
</androidx.constraintlayout.widget.ConstraintLayout>